css/stylesheet.css
/* ... */
.slider-four input[type=range]::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  pointer-events: all;
  position: relative;
  top: -1px;
  height: 3px;
  border-radius: 6px;
  outline: 0;
  background: #232528;
  border: 1px inset #030000;
  border-bottom: 1px inset #474C4E;
}

.slider-four input.thumb-one[type=range]::-moz-range-track {
  -moz-appearance: none;
  pointer-events: all;
  position: relative;
  top: -1px;
  height: 3px;
  border-radius: 6px;
  outline: 0;
  background: #232528;
  border: 1px inset #030000;
  border-bottom: 1px inset #474C4E;
}

.slider-four input.thumb-one[type=range]::-ms-track {
  -ms-appearance: none;
  pointer-events: all;
  position: relative;
  top: -1px;
  height: 3px;
  border-radius: 6px;
  outline: 0;
  background: #232528;
  border: 1px inset #030000;
  border-bottom: 1px inset #474C4E;
}

.slider-four .on {
  position: relative;
  left: 5px;
  bottom: 10px;
  font-size: 10px;
  font-weight: bold;
  color: #DBE1E3;
  text-shadow: 0px 1px #919CA6;
}

.slider-four .off {
  position: relative;
  left: 5px;
  bottom: 10px;
  font-size: 10px;
  font-weight: bold;
  color: #DBE1E3;
  text-shadow: 0px 1px #919CA6;
}

.slider-four input[type=range]::-webkit-slider-thumb {
  -wekbit-appearance: none;
  position: relative;
  width: 20px;
  height: 20px;
  top: -8px;
}

.slider-four input[type=range]::-moz-range-thumb {
  -moz-appearance: none;
  position: relative;
  width: 20px;
  height: 20px;
  top: -6px;
}

.slider-four input[type=range]::-ms-thumb {
  -ms-appearance: none;
  position: relative;
  width: 20px;
  height: 20px;
  top: -6px;
}

.slider-four input[type=range]::-webkit-slider-thumb:after {
  -wekbit-appearance: none;
  display: block;
  content: '';
  width: 5px;
  height: 5px;
  border-radius: 50%;
  background: #D94949;
  position: relative;
  top: 7px;
  left: 6px;
  border: 1px inset #D94949;
}

.slider-four input.thumb-one[type=range]::-moz-range-thumb:after {
  -moz-appearance: none;
  display: block;
  content: '';
  width: 5px;
  height: 5px;
  border-radius: 50%;
  background: #D94949;
  position: relative;
  top: 7px;
  left: 6px;
  border: 1px inset #D94949;
}

.slider-four input.thumb-one[type=range]::-ms-thumb:after {
  -ms-appearance: none;
  display: block;
  content: '';
  width: 5px;
  height: 5px;
  border-radius: 50%;
  background: #D94949;
  position: relative;
  top: 7px;
  left: 6px;
  border: 1px inset #D94949;
}

/* slider five */
.slider-five {
  text-align: center;
}

.slider-five input {
  position: relative;
  overflow: hidden;
}

.slider-five input.thumb-one[type=range] {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  height: 28px;
  width: 330px;
  postion: relative;
  /*left: 75px;*/
  border-radius: 20px;
  padding: 2px 10px;
  background: #2B2E31;
  box-shadow: inset -1px 2px 11px -3px #030000;
  -webkit-box-shadow: inset -1px 2px 11px -3px #030000;
  -moz-box-shadow: inset -1px 2px 11px -3px #030000;
}

.slider-five input.thumb-two[type=range] {
  height: 28px;
  width: 330px;
  postion: relative;
  /*left: 75px;*/
  bottom: 46px;
  border-radius: 20px;
  padding: 10px;
  background: transparent;
}

.slider-five input[type=range]::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  pointer-events: all;
  position: relative;
  top: 2px;
  height: 7px;
  border-radius: 6px;
  outline: 0;
  background: linear-gradient(to right,
    #030001 20%, #468BD8 20%, #468BD8 80%,
    #030000 80%);
  border: 1px inset #030000;
  border-bottom: 1px inset #474C4E;
}

.slider-five input.thumb-one[type=range]::-moz-range-track {
  -moz-appearance: none;
  pointer-events: all;
  position: relative;
  bottom: 1px;
  height: 7px;
  border-radius: 6px;
  outline: 0;
  background: -moz-linear-gradient(to right,
    #030001 20%, #468BD8 20%, #468BD8 80%,
    #030000 80%);
  border: 1px inset #030000;
  border-bottom: 1px inset #474C4E;
}

.slider-five input.thumb-two[type=range]::-moz-range-track {
  -moz-appearance: none;
  height: 0;
}

.slider-five input.thumb-one[type=range]::-ms-track {
  -ms-appearance: none;
  pointer-events: all;
  position: relative;
  bottom: 1px;
  height: 7px;
  border-radius: 6px;
  outline: 0;
  background: -ms-linear-gradient(to right,
    #030001 20%, #468BD8 20%, #468BD8 80%,
    #030000 80%);
  border: 1px inset #030000;
  border-bottom: 1px inset #474C4E;
}

.slider-five input.thumb-one[type=range]::-ms-track {
  -ms-appearance: none;
  height: 0;
}

.slider-five input.thumb-two[type=range]::-webkit-slider-thumb {
  -wekbit-appearance: none;
  width: 15px;
  height: 15px;
  top: -5px;
}

.slider-five input[type=range]::-moz-range-thumb {
  -moz-appearance: none;
  width: 15px;
  height: 15px;
  top: -5px;
}

.slider-five input[type=range]::-ms-thumb {
  -ms-appearance: none;
  width: 15px;
  height: 15px;
  top: -5px;
}

.slider-five input[type=range]::-webkit-slider-thumb:after {
  -wekbit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  display: block;
  content: '';
  width: 3px;
  height: 3px;
  border-radius: 50%;
  background: #6D7173;
  position: relative;
  top: 5px;
  left: 5px;
  border: 1px inset #6D7173;
}

.slider-five input[type=range]::-moz-range-thumb:after {
  -moz-appearance: none;
  display: block;
  content: '';
  width: 3px;
  height: 3px;
  border-radius: 50%;
  background: #6D7173;
  position: relative;
  top: 5px;
  left: 5px;
  border: 1px inset #6D7173;
}

.slider-five input[type=range]::-ms-thumb:after {
  -ms-appearance: none;
  display: block;
  content: '';
  width: 3px;
  height: 3px;
  border-radius: 50%;
  background: #6D7173;
  position: relative;
  top: 5px;
  left: 5px;
  border: 1px inset #6D7173;
}

.slider-five input.thumb-one[type=range] {
  background-image: repeating-linear-gradient(90deg, #030001, #030001 1px, transparent 0.125em, transparent 0.125em, transparent 4.0em);
}
/* ... */

